@@ -51,25 +51,25 @@ export("%.%",anova.gam, bam, bam.update,bandchol, betar,
        sim2jam,Sl.initial.repara,Sl.inirep,Sl.repara,Sl.setup,
        slanczos,smooth2random,
        smoothCon,smooth.construct,smooth.construct2,
-#       smooth.construct.bs.smooth.spec,
-#       smooth.construct.cc.smooth.spec,
-#       smooth.construct.cp.smooth.spec,
-#       smooth.construct.cr.smooth.spec,
-#       smooth.construct.cs.smooth.spec,
-#       smooth.construct.ds.smooth.spec,
-#       smooth.construct.tensor.smooth.spec,
-#       smooth.construct.tp.smooth.spec,
-#       smooth.construct.ts.smooth.spec,
-#       smooth.construct.ps.smooth.spec,
-#       smooth.construct.re.smooth.spec,
-#       smooth.construct.mrf.smooth.spec,
-#       smooth.construct.gp.smooth.spec,
-#       smooth.construct.sos.smooth.spec,
-#       smooth.construct.so.smooth.spec,
-#       smooth.construct.sf.smooth.spec,
-#       smooth.construct.sw.smooth.spec,   
-#       smooth.construct.ad.smooth.spec,
-#       smooth.construct.t2.smooth.spec,
+       smooth.construct.bs.smooth.spec,
+       smooth.construct.cc.smooth.spec,
+       smooth.construct.cp.smooth.spec,
+       smooth.construct.cr.smooth.spec,
+       smooth.construct.cs.smooth.spec,
+       smooth.construct.ds.smooth.spec,
+       smooth.construct.tensor.smooth.spec,
+       smooth.construct.tp.smooth.spec,
+       smooth.construct.ts.smooth.spec,
+       smooth.construct.ps.smooth.spec,
+       smooth.construct.re.smooth.spec,
+       smooth.construct.mrf.smooth.spec,
+       smooth.construct.gp.smooth.spec,
+       smooth.construct.sos.smooth.spec,
+       smooth.construct.so.smooth.spec,
+       smooth.construct.sf.smooth.spec,
+       smooth.construct.sw.smooth.spec,   
+       smooth.construct.ad.smooth.spec,
+       smooth.construct.t2.smooth.spec,
        smooth.info,
        summary.gam,sp.vcov,
        spasm.construct,spasm.sp,spasm.smooth,
