@@ -3248,7 +3248,7 @@ residuals.gam <-function(object, type = "deviance",...)
   }
   res <- naresid(object$na.action,res)
   res
-}
+} ## residuals.gam
 
 
 ## Start of anova and summary (with contributions from Henric Nilsson) ....
@@ -3742,18 +3742,20 @@ summary.gam <- function (object, dispersion = NULL, freq = FALSE,re.test = TRUE,
     if (useR)  X <- object$R else {
       sub.samp <- max(1000,2*length(object$coefficients)) 
       if (nrow(object$model)>sub.samp) { ## subsample to get X for p-values calc.
-        seed <- try(get(".Random.seed",envir=.GlobalEnv),silent=TRUE) ## store RNG seed
-        if (inherits(seed,"try-error")) {
-          runif(1)
-          seed <- get(".Random.seed",envir=.GlobalEnv)
-        }
-        kind <- RNGkind(NULL)
-        RNGkind("default","default")
-        set.seed(11) ## ensure repeatability
+        kind <- temp.seed(11)
+        #seed <- try(get(".Random.seed",envir=.GlobalEnv),silent=TRUE) ## store RNG seed
+        #if (inherits(seed,"try-error")) {
+        #  runif(1)
+        #  seed <- get(".Random.seed",envir=.GlobalEnv)
+        #}
+        #kind <- RNGkind(NULL)
+        #RNGkind("default","default")
+        #set.seed(11) ## ensure repeatability
         ind <- sample(1:nrow(object$model),sub.samp,replace=FALSE)  ## sample these rows from X
         X <- predict(object,object$model[ind,],type="lpmatrix")
-        RNGkind(kind[1],kind[2])
-        assign(".Random.seed",seed,envir=.GlobalEnv) ## RNG behaves as if it had not been used
+        #RNGkind(kind[1],kind[2])
+        #assign(".Random.seed",seed,envir=.GlobalEnv) ## RNG behaves as if it had not been used
+        temp.seed(kind)
       } else { ## don't need to subsample 
         X <- model.matrix(object)
       }
